# Auto-Train-Agent

./: .gitignore  CLAUDE.md  README.md  init.sh  progress.txt  pyproject.toml  requirements.txt  run-automation.sh  task.json
